fixed favicon and polaroid on mobile

--- a/style.css
+++ b/style.css
@@ -851,7 +851,7 @@
             background-color: #e3e2de;
             padding-right: 1.5em;
             padding-left: 1.5em;
-            padding-top: 3em;
+            padding-top: 4em;
             padding-bottom: 5em;
         }
         .aboutme h1 {
@@ -868,7 +868,7 @@
         .aboutme .nametag {
             font-family: "Barlow Semi Condensed", monospace;
             font-size: 1.4em;
-            padding-top: 15em;
+            padding-top: 16em;
             margin-left: -14.1em;
         }
         .aboutme .nametag h1 {
